--- a/src/App.css
+++ b/src/App.css
@@ -1,33 +1,102 @@
-.App {
-  text-align: center;
-}
+@import url('https://fonts.googleapis.com/css?family=Roboto&display=swap');
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
+* {
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+  -webkit-font-smoothing: antialiased;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+body {
+  width: 100%;
+  background: #fff;
+  font-family: 'Roboto', sans-serif;
+  color: rgb(36, 57, 66);
+}
+.container {
+  width: 300px;
+  margin: 3rem auto;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
-
-.App-link {
-  color: #61dafb;
+header {
+  text-align: center;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.logo {
+  width: 70%;
+  margin: 2rem 0;
+}
+form {
+  display: flex;
+  flex-direction: column;
+}
+form label {
+  font-size: 15px;
+  border-radius: 5px;
+  padding-top: 1.2rem;
+}
+form input {
+  display: block;
+  height: 40px;
+  margin: 8px 0;
+  border: 1px solid rgb(230, 230, 230);
+  border-radius: 5px;
+  font-size: 16px;
+  padding: 0.5rem;
+  color: rgb(36, 57, 66);
+  outline: none;
+}
+form input.low {
+  border: 1px solid rgb(253, 18, 18);
+}
+form input.mediun {
+  border: 1px solid rgb(244, 168, 30);
+}
+form input.high {
+  border: 1px solid rgb(62, 209, 102);
+}
+form .psw-level-security {
+  display: flex;
+  justify-content: space-between;
+}
+form .psw-level-security div {
+  width: 30%;
+  height: 4px;
+  background-color: rgb(230, 230, 230);
+  border-radius: 1px;
+}
+form .low .bar1 {
+  background-color: rgb(253, 18, 18);
+}
+form .mediun .bar1,
+form .mediun .bar2 {
+  background-color: rgb(244, 168, 30);
+}
+form .high .bar {
+  background-color: rgb(62, 209, 102);
+}
+form ul li {
+  color: rgb(163 ,163, 163);
+  font-size: 13px;
+  margin: 0.4rem 1.1rem;
+}
+form ul span.success {
+  color:rgb(62, 209, 102);
+}
+form ul span.error {
+  color:rgb(253, 18, 18);
+}
+form button {
+  border: none;
+  cursor: pointer;
+  outline: none;
+  height: 40px;
+  display: block;
+  font-weight: 700;
+  font-size: 16px;
+  color: rgb(36, 57, 66);
+  text-align: center;
+  text-transform: uppercase;
+  background: rgb(249, 187, 62); 
+  border-radius: 5px;
+  margin-top: 1rem;
 }
